--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Melody Matcher</title>
+    <link rel="icon" href="/icon.png" type="image/png">
     <link rel="stylesheet" href="styles/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <div class="main">
         <h1>Hello</h1>
+        <h3>Welcome to Melody Matcher</h3>
+        <h4>Enter you name to get started</h4>
         <input type="text" placeholder="Enter your name" id="getUsername"></input>
         <button onclick="getUserInput()">click here</button>
     </div>
